--- a/ui/EditMainUI.ui
+++ b/ui/EditMainUI.ui
@@ -36,7 +36,7 @@
     <string>Refresh All</string>
    </property>
   </widget>
-  <widget class="QTreeWidget" name="baseideaunit">
+  <widget class="QTreeWidget" name="basetoolunit">
    <property name="geometry">
     <rect>
      <x>10</x>
