--- a/ui/systemMainUI.ui
+++ b/ui/systemMainUI.ui
@@ -562,7 +562,7 @@
      </property>
     </column>
    </widget>
-   <widget class="QTableWidget" name="w_ideas_table">
+   <widget class="QTableWidget" name="w_tools_table">
     <property name="geometry">
      <rect>
       <x>600</x>
@@ -578,12 +578,12 @@
     </property>
     <column>
      <property name="text">
-      <string>Person Ideas</string>
+      <string>Person Tools</string>
      </property>
     </column>
     <column>
      <property name="text">
-      <string>Idea walk</string>
+      <string>Tool walk</string>
      </property>
     </column>
     <column>
