--- a/ui/systemMainUI.ui
+++ b/ui/systemMainUI.ui
@@ -872,7 +872,7 @@
      <string>dest2public and refresh</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="starting_digest_open_button">
+   <widget class="QPushButton" name="isol_digest_open_button">
     <property name="geometry">
      <rect>
       <x>530</x>
@@ -887,10 +887,10 @@
      </font>
     </property>
     <property name="text">
-     <string>starting</string>
+     <string>isol</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="starting_digest_save_button">
+   <widget class="QPushButton" name="isol_digest_save_button">
     <property name="geometry">
      <rect>
       <x>530</x>
