--- a/ui/System5IssueUI.ui
+++ b/ui/System5IssueUI.ui
@@ -551,7 +551,7 @@
     </font>
    </property>
    <property name="text">
-    <string>Author Name:</string>
+    <string>Actor Name:</string>
    </property>
   </widget>
   <widget class="QLineEdit" name="issue_10">
